--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ android {
         applicationId "io.github.wangcheng678.lockscreen"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 3
+        versionCode 5
         versionName '1.2.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
